--- a/config.toml
+++ b/config.toml
@@ -1,14 +1,14 @@
-baseURL = "https://example.com"
+baseURL = "https://www.zisarknar.com/"
 languageCode = "en"
 defaultContentLanguage = "en"
-title = "KeepIt"
+title = "Zisarknar"
 theme = "KeepIt"
 
 paginate = 12
 enableEmoji = true
 enableRobotsTXT = true
 googleAnalytics = ""
-disqusShortname = "yourdiscussshortname"
+disqusShortname = "zisarknar"
 
 [sitemap]
   changefreq = "monthly"
@@ -25,7 +25,7 @@ disqusShortname = "yourdiscussshortname"
 
 [menu]
   [[menu.main]]
-    name = "Blog"
+    name = "Posts"
     url = "/posts/"
     weight = 1
 
@@ -39,10 +39,15 @@ disqusShortname = "yourdiscussshortname"
     url = "/about"
     weight = 4
 
+  [[menu.main]]
+    name = "Contact"
+    url = "/contact"
+    weight = 5
+
 [params]
-    since = 2012
-    author = "Fastbyte01"               # Author's name
-    subtitle = "A Hugo theme"       # Subtitle
+    since = 2020
+    author = "zisarknar"               # Author's name
+    subtitle = "A Full Stack Developer, Mobile Developer and ..."       # Subtitle
     cdn_url = ""           # Base CDN URL
     home_mode = "" # post or other
 
@@ -52,7 +57,7 @@ disqusShortname = "yourdiscussshortname"
     pinterest_verification = ""
     baidu_verification = ""
 
-    avatar = "/images/me/avatar.jpg" #comment it to use gravatar
+    avatar = "/images/me/avatar.jpeg" #comment it to use gravatar
     socialShare = true
 
     description = "" # site description
