(fix): fixed some bugs

--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ disqusShortname = "zisarknar"
 [params]
     since = 2020
     author = "zisarknar"               # Author's name
-    subtitle = "A Full Stack Developer, Mobile Developer and ..."       # Subtitle
+    subtitle = "A Full Stack Developer, Mobile Developer and Cyber Security Enthusiast"       # Subtitle
     cdn_url = ""           # Base CDN URL
     home_mode = "" # post or other
 
@@ -70,9 +70,9 @@ disqusShortname = "zisarknar"
 
 
 [params.social]
-    GitHub = "xxxx"
+    GitHub = "Sargonzi"
     Linkedin = "xxxx"
-    Twitter = "xxxx"
+    #Twitter = "xxxx"
     #Instagram = "xxxx"
     #Email   = "xxxx"
     Facebook = "xxxx"
@@ -131,8 +131,6 @@ disqusShortname = "zisarknar"
 [params.share]
 Twitter = true
 Facebook = true
-#Reddit = true
-Linkedin = true
 #Pinterest = true
 #HackerNews = true
 #Mix = true
@@ -145,10 +143,10 @@ Linkedin = true
 copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License."
 
 [author]
-  name = "Fastbyte01"
+  name = "zisarknar"
 
   [params.publisher]
-    name = "Fastbyte01"
+    name = "zisarknar"
 
     [params.publisher.logo]
       url = "logo.png"
