(test): remove CSE on home.page

--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ disqusShortname = "zisarknar"
 [params]
     since = 2020
     author = "zisarknar"               # Author's name
-    subtitle = "A Full Stack Developer, Mobile Developer and Cyber Security Enthusiast"       # Subtitle
+    subtitle = "A Full Stack Developer, Mobile Developer and Dreamer"       # Subtitle
     cdn_url = ""           # Base CDN URL
     home_mode = "" # post or other
 
