--- a/manifest.json
+++ b/manifest.json
@@ -1,30 +1,30 @@
 {
-    "name": "<your-apps-name>",
-    "short_name": "<your-apps-shortname>",
+    "name": "Code00",
+    "short_name": "code00",
     "icons": [{
-      "src": "/img/icons/logo-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
+        "src": "/appicons/favicon-128.png",
+        "sizes": "128x128",
+        "type": "image/png"
     }, {
-      "src": "/img/icons/logo-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
+        "src": "/appicons/apple-touch-icon-144x144.png",
+        "sizes": "144x144",
+        "type": "image/png"
     }, {
-      "src": "/img/icons/logo-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
+        "src": "/appicons/apple-touch-icon-152x152.png",
+        "sizes": "152x152",
+        "type": "image/png"
     }, {
-      "src": "/img/icons/logo-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+        "src": "/appicons/favicon-196x196.png",
+        "sizes": "196x196",
+        "type": "image/png"
     }, {
-      "src": "/img/icons/logo-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
+        "src": "/appicons/splash.png",
+        "sizes": "512x512",
+        "type": "image/png"
     }],
-    "start_url": "/index.html",
+    "start_url": "/",
     "display": "standalone",
     "orientation" : "portrait",
-    "background_color": "#000000",
-    "theme_color": "#000000"
-  }
+    "background_color": "#FFFFFF",
+    "theme_color": "#FFFFFF"
+}
