--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ theme = "KeepIt"
 paginate = 12
 enableEmoji = true
 enableRobotsTXT = true
-googleAnalytics = ""
+googleAnalytics = "UA-155880781-1"
 disqusShortname = "zisarknar"
 
 [sitemap]
